; ModuleID = '/home/carl/AnghaBench/mruby/mrbgems/mruby-bin-debugger/tools/mrdb/extr_mrdb.c_mrdb_state_free.c'
source_filename = "/home/carl/AnghaBench/mruby/mrbgems/mruby-bin-debugger/tools/mrdb/extr_mrdb.c_mrdb_state_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.TYPE_3__* }

@_mrdb_state = common dso_local global %struct.TYPE_3__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mrdb_state_free(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i32 @mrb_debug_context_free(i32* %3)
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** @_mrdb_state, align 8
  %6 = icmp ne %struct.TYPE_3__* %5, null
  br i1 %6, label %7, label %16

7:                                                ; preds = %1
  %8 = load i32*, i32** %2, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** @_mrdb_state, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %12 = call i32 @mrb_free(i32* %8, %struct.TYPE_3__* %11)
  %13 = load i32*, i32** %2, align 8
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** @_mrdb_state, align 8
  %15 = call i32 @mrb_free(i32* %13, %struct.TYPE_3__* %14)
  store %struct.TYPE_3__* null, %struct.TYPE_3__** @_mrdb_state, align 8
  br label %16

16:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @mrb_debug_context_free(i32*) #1

declare dso_local i32 @mrb_free(i32*, %struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
